--- a/.github/funding.yml
+++ b/.github/funding.yml
@@ -5,5 +5,5 @@
 # Kofi: https://ko-fi.com/hieutng
 
 github: hieutng
-buy-me-a-coffee: hieutng
-ko-fi: hieutng
+buy_me_a_coffee: hieutng
+ko_fi: hieutng
